--- a/data/index.html
+++ b/data/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="stylesheet" href="style.css">
     <title>Week 1 Code Challenge</title>
-    <link rel ="stylesheet" type="text/css" href="style.css">
+    
   
 </head>
 <body>
-  
+  <h1>FLATACUTIES</h1>
     
 
     <script src = "./index.js"></script>
