--- a/data/index.html
+++ b/data/index.html
@@ -17,49 +17,18 @@
     <li>Dr.Lion</li>
     <li>Mme Panda</li>
   </ul>
+  <p id="currentVotes">Current Votes: </p>
   <div id="animalData">
-    {
-        "characters": [
-          {
-            "id": 1,
-            "name": "Mr. Cute",
-            "image": "https://thumbs.gfycat.com/EquatorialIckyCat-max-1mb.gif",
-            "votes": 0
-          },
-          {
-            "id": 2,
-            "name": "Mx. Monkey",
-            "image": "https://thumbs.gfycat.com/FatalInnocentAmericanshorthair-max-1mb.gif",
-            "votes": 0
-          },
-          {
-            "id": 3,
-            "name": "Ms. Zebra",
-            "image": "https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif",
-            "votes": 0
-          },
-          {
-            "id": 4,
-            "name": "Dr. Lion",
-            "image": "http://bestanimations.com/Animals/Mammals/Cats/Lions/animated-lion-gif-11.gif",
-            "votes": 0
-          },
-          {
-            "id": 5,
-            "name": "Mme. Panda",
-            "image": "https://media.giphy.com/media/ALalVMOVR8Qw/giphy.gif",
-            "votes": 0
-          }
-        ]
-       }
+    
        
   </div>
 
-  <form action="/action_page.php" method="get" target="_blank">
+  <form action="/action_page.php" method="get" target="_blank" id=" inputVotes">
     <label for="animalVoteData">Votes</label>
     <input type="text" id="animalVoteData" name="animalVoteData"><br><br>
     <input type="submit" value="Submit">
   </form>
+
   
   
 
