--- a/data/index.html
+++ b/data/index.html
@@ -19,14 +19,12 @@
   </ul>
   <p id="currentVotes">Current Votes: </p>
   <div id="animalData">
-    
-       
   </div>
 
-  <form action="/action_page.php" method="get" target="_blank" id=" inputVotes">
+  <form id=" inputVotes">
     <label for="animalVoteData">Votes</label>
     <input type="text" id="animalVoteData" name="animalVoteData"><br><br>
-    <input type="submit" value="Submit">
+    <button type="submit">Submit</button>
   </form>
 
   
