--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
   
 </head>
 <body>
+  <h1>FLATACUTIES</h1>
   <div class="logo">
-    <h1>FLATACUTIES</h1>
+
   </div>
   <div id="character-bar">
+    
 
   </div>
   <div class="characterInfo"></div>
   <div id=" detailed-info">
     <p id ="name">Character Name</p>
     <img
-    id="image"
-    src="assets/dummy.gif"/>
+    id="image"/>
     <h4>Total Votes: <span id='voteCount'>Character's votes</span></h4>
     <form id=" inputVotes">
         <label for="animalVoteData">Votes</label>
         <input type="text" id="animalVoteData" name="animalVoteData"><br><br>
         <button type="submit">Submit</button>
       </form>
-      <button id="reset">Reset</button>
 
   </div>
+  <span></span>
 
   
 
