--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="characterInfo"></div>
   <div id=" detailed-info">
-    <p id ="name">Character Name</p>
+    <h2 id ="name">Character Name</h2>
     <img
     id="image"/>
     <h4>Total Votes: <span id='voteCount'>Character's votes</span></h4>
