--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="stylesheet" href="css/styles.css">
     <title>Week 1 Code Challenge</title>
-    <script>src="js/index.js"</script>
+    <script>src="js/app.js"</script>
   
 </head>
 <body>
   <h1>FLATACUTIES</h1>
+  <ul id="character-list"></ul>
   <div class="logo">
 
   </div>
