--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     
 
   </div>
+  <h2 id ="name">Character Name</h2>
   <div id="characterInfo"></div>
   <div id="detailed-info">
-    <h2 id ="name">character Name</h2>
-   
     <h4>Total Votes: <span id='voteCount'>Character's votes</span></h4>
     <form id=" inputVotes">
         <label for="animalVoteData">Votes</label>
